Grid | fix flex-wrap

--- a/src/scss/components/grid/_grid.scss
+++ b/src/scss/components/grid/_grid.scss
@@ -2,9 +2,10 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  margin-left: auto;
   margin-right: auto;
+  margin-left: auto;
   align-items: flex-start;
+  flex-wrap: wrap;
 }
 
 .Grid--gutters {
